--- a/src/index.css
+++ b/src/index.css
@@ -180,7 +180,7 @@ Stripe Styles
   content: '';
   position: absolute;
   width: 100%;
-  height: 65%;
+  height: 40%;
   top: 0;
   left: 0;
   background: url(./images/hero.svg);
@@ -201,6 +201,53 @@ Stripe Styles
   max-width: var(--max-width);
   display: grid;
   align-items: center;
+}
+.hero-two {
+     width: 100%;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  align-items: center;
+  height: 40vh;
+  background-color: rgb(255, 255, 255);
+}
+.hero-three {
+  width: 100%;
+  height: 40vh;
+  background-color:var(--clr-primary-1) ;
+  color:white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  letter-spacing: 1px;
+  
+}
+.icons {
+  color: green;
+  width: 30px;
+  height: auto;
+}
+.inner-hero {
+ max-width: var(--max-width);
+ margin: auto;
+ margin-top: 2em;
+}
+.img-comercial {
+  width: 10rem;
+  height: 20vh;
+  margin: 1em 1em;
+  border-radius: 50%;
+  
+
+
+}
+.images {
+  display: flex;
+  justify-content: center;
+  padding: 1em;
+  
+  
 }
 
 .hero-info h1 {
