--- a/src/index.css
+++ b/src/index.css
@@ -136,11 +136,8 @@ h4 {
 }
 
 
-.change-color {
-   transition: all 1s ease-in-out;
-  background-color: rgb(17, 17, 2);
-  opacity: 0.7;
-  position:fixed;
+.nav.active {
+display: none;
  
 }
 
