--- a/src/components/series/mavic/Mavic.scss
+++ b/src/components/series/mavic/Mavic.scss
@@ -1,7 +1,39 @@
 .header {
-    width: 100%;
-    height: 60vh;
-    background-color: aqua;
    
     
+    
+   
+    
+}
+.video-container {
+  height: 80vh;
+  width: 100%;
+  position: relative;
+}
+
+.video-container video {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  object-fit: cover;
+  z-index: 0;
+}
+
+/* Just styling the content of the div, the *magic* in the previous rules */
+.video-container .caption {
+  z-index: 1;
+  position: relative;
+  text-align: center;
+  color: #f5ebeb;
+  top: 40%;
+  padding: 10px;
+}
+.section {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  text-align: center;
+  .air-desc {
+    padding: 3em;
+  }
 }
