--- a/src/components/HelpGrid.scss
+++ b/src/components/HelpGrid.scss
@@ -5,15 +5,17 @@
     justify-content: center;
     gap: 2em;
     padding: 2em;
+      background-color: rgb(255, 255, 255);
     .drone-image {
-    width:30rem;
+    width:40rem;
     height: 50vh;
     border-radius: 20%;
+  
 
 }
 
 .drone-image:hover {
-    box-shadow: 1px 1px 1px 0px;
+    
     transition: ease-in 0.4s;
 }
  .link {
@@ -36,7 +38,7 @@
    justify-content: center;
    align-items: center;     
    flex-direction: column;
-
+  
  }
  .link:hover {
      background-color: rgb(146, 31, 60);
@@ -47,7 +49,7 @@
  }
 
 .content {
-    width: 34rem;
+    width: 50rem;
     
    
     
