--- a/src/index.css
+++ b/src/index.css
@@ -78,6 +78,15 @@ Global Styles
   padding: 0;
   box-sizing: border-box;
 }
+body {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  color: var(--mainBlack);
+  background: var(--mainBackground);
+  line-height: 1.4;
+  font-size: 1rem;
+  font-weight: 300;
+}
 
 ul {
   list-style-type: none;
