set-redux-start-workon

--- a/src/components/navCart/NavCart.scss
+++ b/src/components/navCart/NavCart.scss
@@ -1,5 +1,9 @@
-.avcart-container {
-    width: 100%;
+.navcart-container {
+    width: 50rem;
     height: 10vh;
     background-color: antiquewhite;
+    position: absolute;
+    top: 10%;
+    text-align: center;
+
 }
