--- a/src/components/slider/Slider.scss
+++ b/src/components/slider/Slider.scss
@@ -31,7 +31,8 @@ Variables
 
   .slider {
       background-color: var(   --clr-grey-9);
-      height: 90vh;
+      height: 50vh;
+      padding: 2em;
 
       
   }
