--- a/src/page/hero/Hero.css
+++ b/src/page/hero/Hero.css
@@ -2,7 +2,7 @@
     content: '';
     
     width: 100%;
-    height: 50vh;
+   
     
    
     background-image:  -webkit-linear-gradient(hsl(206, 68%, 9%), rgba(24, 108, 173, 0.7)), url(../../images/dronpeople.jpg);
@@ -17,7 +17,7 @@
   }
   .hero {
     
-    min-height: 100vh;
+    min-height: 70vh;
    
     display: grid;
     
@@ -72,6 +72,7 @@
   a {
     margin: 1em;
     width: 10rem;
+    background: rgb(36, 94, 110);
   }
   .hero-center {
     width: 100%;
@@ -82,7 +83,7 @@
     align-items: center;
     position: absolute;
     top: 30%;
-    left:1%;
+    right:1%;
     
   }
   .log-content {
@@ -94,7 +95,7 @@
  
   .hero-three {
     width: 100%;
-    height: 40vh;
+    height: 20vh;
     background-color:var(--clr-primary-1) ;
     color:white;
     display: flex;
@@ -102,7 +103,7 @@
     align-items: center;
     text-align: center;
     letter-spacing: 1px;
-    font-size: 2rem;
+    font-size: 1.6rem;
     
   }
   
