--- a/src/components/series/mavic/Mavic.scss
+++ b/src/components/series/mavic/Mavic.scss
@@ -1,7 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400&family=Oswald&family=Poppins:wght@200&family=Roboto+Condensed&display=swap');
+
 .header {
    
     
     background-color: black;
+    font-family: 'Montserrat', sans-serif;
+
    
    
     
