--- a/src/components/navbar/Sidebar.scss
+++ b/src/components/navbar/Sidebar.scss
@@ -43,14 +43,17 @@
 .sidebar-sublinks {
   display: grid;
   grid-template-columns: 1fr 1fr;
+     
+
   row-gap: 0.25rem;
 }
 .sidebar-sublinks a {
   display: block;
-  color: var(--clr-grey-1);
+  color: black;
   text-transform: capitalize;
   display: flex;
   align-items: center;
+   background-color: white;
 }
 .sidebar-sublinks svg {
   color: var(--clr-grey-5);
