--- a/src/components/HelpGrid.scss
+++ b/src/components/HelpGrid.scss
@@ -44,5 +44,6 @@ img {
     text-align: center;
     flex-direction: column;
     align-items: center;
+    font-family: 'Montserrat', sans-serif;
 
 }
