--- a/src/index.css
+++ b/src/index.css
@@ -59,8 +59,7 @@ Global Styles
   box-sizing: border-box;
 }
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+   font-family: 'Montserrat', sans-serif;
   color: var(--mainBlack);
   background: var(--mainBackground);
   line-height: 1.4;
